fix wrong size for info box

--- a/css/stweaks.css
+++ b/css/stweaks.css
@@ -22,7 +22,8 @@
 
 #st-container-info {
     width: 20%;
-    height: 75px;
+    /* Two pixels for the border */
+    height: 73px;
     float: left;
     display: grid;
     border: 1px solid #474747;
@@ -103,7 +104,6 @@
     background-color: #222222;
     color: #BBBBBB;
     border: 1px solid #474747;
-    border-radius: 5px;
 }
 
 .st-button-change {
